theme fix on mobile and small fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,14 @@ body.hide-footer footer {
   display: none;
 }
 
+html.hide-body {
+  overflow: hidden;
+}
+
+html.hide-body body {
+  overflow: hidden;
+}
+
 * {
   transition-property: background-color, border-color, color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
